--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,6 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
+
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -11,8 +12,9 @@ builds:
       - CGO_ENABLED=0
     dir: .
     main: main.go
+    binary: app
     goos:
-      - darwin
+#      - darwin
       - linux
     goarch:
       - amd64
@@ -28,6 +30,7 @@ archives:
       windows: Windows
       386: i386
       amd64: x86_64
+
 checksum:
   name_template: 'checksums.txt'
 snapshot:
